[package]
name = "lobsters"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alvarobartt/lobsters"
authors = ["Alvaro Bartolome <alvarobartt@gmail.com>"]

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.8.1", features = ["tokio"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["macros", "net", "tracing", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
